<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw4"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/text_normal"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_clear"
                android:layout_margin="16dp"
                android:onClick="clickClear"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw5"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/text_normal"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_light_gray"
                android:layout_below="@id/tv1"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw6"
                    android:textColor="@color/text_normal"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw7"
                    android:textColor="@color/text_normal"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw8"
                    android:textColor="@color/text_normal"
                    android:textSize="12sp"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw9"
                    android:textColor="@color/text_normal"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw10"
                android:layout_below="@id/layout1"
                android:layout_margin="16dp"
                android:textColor="@color/text_normal"
                android:textStyle="bold"
                android:paddingTop="16dp"/>
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:paddingLeft="16dp">
                <RadioButton
                    android:id="@+id/alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw11"/>

                <RadioButton
                    android:id="@+id/use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw12"/>

                <RadioButton
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw13"/>

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw14"/>
            </RadioGroup>
            <EditText
                android:id="@+id/et_excuse"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/withdraw15"
                android:layout_below="@id/radio"
                android:background="@drawable/et"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="12sp"
                android:padding="16dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"/>

            <RelativeLayout
                android:id="@+id/layout_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="16dp"
                android:background="@color/text_light_gray"
                android:onClick="clickWithdraw"
                android:clickable="false"
                android:layout_below="@id/et_excuse">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw16"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </RelativeLayout>
           </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>