<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_normal"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:text="@string/withdraw2"
        android:gravity="center"
        android:textColor="@color/text_normal"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw3"
        android:layout_below="@id/tv2"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no"
        android:text="@string/withdraw4"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
</RelativeLayout>