<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GosuJoin6Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gosu_join"
                android:layout_gravity="center"
                android:textColor="@color/text_normal"
                android:textSize="16sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear"
                android:layout_gravity="right"
                android:layout_margin="16dp"
                android:onClick="clickClear"/>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progress="100"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/progress">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress"
                android:layout_gravity="center"
                android:text="@string/progress4"
                android:textColor="@color/brandColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/branch_service7"
                android:textColor="@color/text_normal"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="60dp"
                android:text="@string/branch_service8"
                android:textColor="@color/text_normal"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:id="@+id/tvM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_service9"
                    android:background="@drawable/tv_selector"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="8dp"
                    android:onClick="clickMF"/>
                <TextView
                    android:id="@+id/tvF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_service10"
                    android:background="@drawable/tv_selector"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="8dp"
                    android:onClick="clickMF"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/branch_service11"
                android:textColor="@color/text_normal"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_service12"
                    android:background="@drawable/et"
                    android:textSize="12sp"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:inputType="number|phone"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et"
                    android:layout_alignParentRight="true"
                    android:text="@string/branch_service13"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/branch_service14"
                android:textColor="@color/text_normal"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_service15"
                    android:background="@drawable/et"
                    android:textSize="12sp"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et"
                    android:layout_alignParentRight="true"
                    android:text="@string/branch_service16"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_light_gray"
                android:layout_marginTop="40dp"
                android:onClick="clickComplete"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/complete"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="8dp"/>
            </RelativeLayout>



        </LinearLayout>

</RelativeLayout>