<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/emptyItemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            android:layout_below="@id/iv"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text2"
            android:layout_below="@id/tv"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_light_gray"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text3"
            android:layout_below="@id/tv2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_light_gray"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@id/tv3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/btn"/>


    </RelativeLayout>

</RelativeLayout>