<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_tab4"
                android:textSize="18sp"
                android:textColor="@color/text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/tab4_text"
                android:textColor="@color/text_light_gray"
                android:textSize="16sp"
                android:layout_margin="16dp"/>


        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"
        android:layout_below="@id/appbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/chat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"/>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_emptytext"
            android:layout_below="@id/iv"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3_text3"
            android:layout_below="@id/tv"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_light_gray"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3_text4"
            android:layout_below="@id/tv2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_light_gray"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>

</RelativeLayout>